chore: quick save

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
         <meta property="og:title" content="Filis&#039; blog"/>
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://my-jigsaw-blog.com/"/>
+        <meta property="og:url" content="https://filisko.github.io/"/>
         <meta property="og:description" content="Filis blog" />
 
         <title>Filis&#039; blog</title>
 
-        <link rel="home" href="https://my-jigsaw-blog.com">
+        <link rel="home" href="https://filisko.github.io">
         <link rel="icon" href="/favicon.ico">
         <link href="/articles/feed.atom" type="application/atom+xml" rel="alternate" title="Filis&#039; blog Atom Feed">
         
@@ -128,7 +128,7 @@
     
     <h2 class="text-3xl mt-0 mb-2">
         <a
-            href="https://my-jigsaw-blog.com/articles/why-and-how-simple-code"
+            href="https://filisko.github.io/articles/why-and-how-simple-code"
             title="Read more - Simplicity in code"
             class="text-gray-900 font-extrabold"
         >Simplicity in code</a>
