chore: quick save

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           (function() {
             var u="https://filis.matomo.cloud/";
             _paq.push(['setTrackerUrl', u+'matomo.php']);
-            _paq.push(['setSiteId', '2']);
+            _paq.push(['setSiteId', '3']);
             var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
             g.async=true; g.src='//cdn.matomo.cloud/filis.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
           })();
@@ -154,7 +154,7 @@
         href="https://filisko.github.io/articles/simplicity-in-code"
         title="Read more - Simplicity in Code"
         class="uppercase underline font-semibold tracking-wide mb-2"
-    >Read more</a>
+    >See Full Article</a>
 </div>
 
             
