chore: quick save

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
         <meta property="og:title" content="Filis&#039; blog"/>
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://filisko.github.io/"/>
+        <meta property="og:url" content="https://filis.me/"/>
         <meta property="og:description" content="Filis blog" />
 
         <title>Filis&#039; blog</title>
 
-        <link rel="home" href="https://filisko.github.io">
+        <link rel="home" href="https://filis.me">
         <link rel="icon" href="/favicon.ico">
         <link href="/articles/feed.atom" type="application/atom+xml" rel="alternate" title="Filis&#039; blog Atom Feed">
         
@@ -130,7 +130,7 @@
                         <div class="flex flex-col mb-4">
     <h2 class="text-3xl mt-0 mb-2">
         <a
-            href="https://filisko.github.io/articles/simplicity-in-code"
+            href="https://filis.me/articles/simplicity-in-code"
             title="Read more - Simplicity in Code"
             class="text-gray-900 font-extrabold"
         >Simplicity in Code</a>
@@ -151,7 +151,7 @@
     <p class="mb-4 mt-0 text-xl">Simplicity? Oh yeah. That thing. Overloaded term? Nah, just a little bit.</p>
 
      <a
-        href="https://filisko.github.io/articles/simplicity-in-code"
+        href="https://filis.me/articles/simplicity-in-code"
         title="Read more - Simplicity in Code"
         class="uppercase underline font-semibold tracking-wide mb-2"
     >See Full Article</a>
