--- a/404/index.html
+++ b/404/index.html
@@ -8,12 +8,12 @@
 
         <meta property="og:title" content="Filis&#039; blog"/>
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://filisko.github.io/404"/>
+        <meta property="og:url" content="https://filis.me/404"/>
         <meta property="og:description" content="Filis blog" />
 
         <title>Filis&#039; blog</title>
 
-        <link rel="home" href="https://filisko.github.io">
+        <link rel="home" href="https://filis.me">
         <link rel="icon" href="/favicon.ico">
         <link href="/articles/feed.atom" type="application/atom+xml" rel="alternate" title="Filis&#039; blog Atom Feed">
         
