--- a/about/index.html
+++ b/about/index.html
@@ -8,18 +8,18 @@
 
         <meta property="og:title" content="Filis&#039; blog"/>
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://filisko.github.io/about"/>
+        <meta property="og:url" content="https://filis.me/about"/>
         <meta property="og:description" content="Filis blog" />
 
         <title>Filis&#039; blog</title>
 
-        <link rel="home" href="https://filisko.github.io">
+        <link rel="home" href="https://filis.me">
         <link rel="icon" href="/favicon.ico">
         <link href="/articles/feed.atom" type="application/atom+xml" rel="alternate" title="Filis&#039; blog Atom Feed">
         
             <meta property="og:title" content="About Filis&#039; blog" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://filisko.github.io/about"/>
+    <meta property="og:url" content="https://filis.me/about"/>
     <meta property="og:description" content="A little bit about Filis&#039; blog" />
 
         <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,300i,400,400i,700,700i,800,800i" rel="stylesheet">
